# DMC2ArchipelagoClient

./: Cargo.toml  README.md
src/: archipelago.rs  check_handler.rs  config.rs  constants.rs  game_manager.rs  hook.rs  lib.rs  mapping.rs  utilities.rs
src/compat/: ddmk_hook.rs  imgui_bindings.rs  inputs.rs  mod.rs
src/ui/: overlay.rs
